--- a/lichen-orm/build.gradle
+++ b/lichen-orm/build.gradle
@@ -1,1 +1,25 @@
 description = "Lichen Object/Mapping Integration"
+
+hibernateVersion = '3.6.0.Final'
+
+dependencies {
+  compile group: 'org.hibernate', name: 'hibernate-core', version: hibernateVersion, transitive: false
+  compile "org.hibernate:hibernate-commons-annotations:3.2.0.Final"
+  compile "org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.0.Final"
+  
+  runtime "geronimo-spec:geronimo-spec-jta:1.0-M1"  
+  runtime "antlr:antlr:2.7.6"
+  runtime "dom4j:dom4j:1.6.1"
+  
+    
+
+  testCompile "org.easymock:easymock:$easymockVersion"
+  
+  testRuntime "com.h2database:h2:1.1.111"
+}
+
+jar {
+    manifest {
+        attributes 'Tapestry-Module-Classes': 'com.egfit.orm.LichenOrmModule'
+    }
+}
