--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ description = "Lichen Framework"
 // tag the release in Subversion.
 lichenVersion="0.1"
 
-
+tapestryVersion = '5.3.0'
 easymockVersion = '3.0'
 
 
@@ -116,6 +116,7 @@ subprojects {
     // and meta (sources JARs)
     signing { sign configurations.archives, configurations.meta }
   }
+  [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 }
 
 // Specific to top-level build, not set for subprojects:
