--- a/lichen-orm/build.gradle
+++ b/lichen-orm/build.gradle
@@ -6,6 +6,7 @@ dependencies {
   compile group: 'org.hibernate', name: 'hibernate-core', version: hibernateVersion, transitive: false
   compile "org.hibernate:hibernate-commons-annotations:3.2.0.Final"
   compile "org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.0.Final"
+  compile "org.apache.tapestry:tapestry-func:$tapestryVersion"
   
   runtime "geronimo-spec:geronimo-spec-jta:1.0-M1"  
   runtime "antlr:antlr:2.7.6"
