--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ lichenVersion="0.1"
 
 tapestryVersion = '5.3.0'
 easymockVersion = '3.0'
-hibernateVersion = '3.6.0.Final'
+hibernateVersion = '3.6.7.Final'
 springVersion = '2.5.6.SEC02'
 
 
@@ -41,6 +41,7 @@ allprojects {
 
         // All things JBoss/Javassist/Hibernate
         mavenRepo urls: "https://repository.jboss.org/nexus/content/repositories/releases/" 
+        mavenRepo name: "cloudhopper", urls: "http://maven.cloudhopper.com/repos/third-party/"
     }
 }
 
