--- a/lichen-orm/src/test/resources/log4j.properties
+++ b/lichen-orm/src/test/resources/log4j.properties
@@ -16,4 +16,4 @@ log4j.rootCategory=info,stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p] %t %c{2} %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} [%p] %t: %c{2} %m%n
