--- a/lichen-orm/pom.xml
+++ b/lichen-orm/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 <!-- 
    Copyright 2011 the original author or authors.
 
@@ -15,21 +15,21 @@
    limitations under the License.
 -->
 
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>lichen-project</artifactId>
-		<groupId>lichen</groupId>
-		<version>0.1-SNAPSHOT</version>
-	</parent>
-	<artifactId>lichen-orm</artifactId>
-	<groupId>lichen-orm</groupId>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>lichen-project</artifactId>
+        <groupId>lichen</groupId>
+        <version>0.1-SNAPSHOT</version>
+    </parent>
+    <artifactId>lichen-orm</artifactId>
+    <groupId>lichen-orm</groupId>
     <name>Lichen Object/Mapping Integration</name>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring</artifactId>
             <version>${spring-release-version}</version>
-		</dependency>
+        </dependency>
         <dependency>
             <groupId>org.apache.tapestry</groupId>
             <artifactId>tapestry-ioc</artifactId>
@@ -56,33 +56,33 @@
             <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
-		<dependency>
-			<groupId>org.easymock</groupId>
-			<artifactId>easymock</artifactId>
-			<version>3.0</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-			</resource>
-			<resource>
-				<directory>src/main/java</directory>
-				<excludes>
-					<exclude>**/*.java</exclude>
-					<exclude>**/package.html</exclude>
-				</excludes>
-			</resource>
-			<resource>
-				<directory>${resource-conf}</directory>
-			</resource>
-		</resources>
-		<testResources>
-			<testResource>
-				<directory>src/test/resources</directory>
-			</testResource>
-		</testResources>
-	</build>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>src/main/java</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                    <exclude>**/package.html</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>${resource-conf}</directory>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
+    </build>
 </project>
