--- a/lichen-orm/pom.xml
+++ b/lichen-orm/pom.xml
@@ -62,6 +62,12 @@
             <version>3.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.1.111</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <resources>
