--- a/pom.xml
+++ b/pom.xml
@@ -102,8 +102,8 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
-						<source>1.6</source>
-						<target>1.6</target>
+						<source>1.5</source>
+						<target>1.5</target>
 						<optimize>true</optimize>
 						<encoding>utf-8</encoding>
 					</configuration>
@@ -223,6 +223,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.4</version>
 				<reportSets>
 					<reportSet>
 						<reports>
