--- a/lichen-orm/pom.xml
+++ b/lichen-orm/pom.xml
@@ -23,49 +23,42 @@
     </parent>
     <artifactId>lichen-orm</artifactId>
     <groupId>lichen-orm</groupId>
+    <version>${project.parent.version}</version>
     <name>Lichen Object/Mapping Integration</name>
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring</artifactId>
-            <version>${spring-release-version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tapestry</groupId>
             <artifactId>tapestry-ioc</artifactId>
-            <version>${tapestry-release-version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tapestry</groupId>
             <artifactId>tapestry-func</artifactId>
-            <version>${tapestry-release-version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>${hibernate-release-version}</version>
         </dependency>
         <dependency>
             <groupId>proxool</groupId>
             <artifactId>proxool</artifactId>
-            <version>0.9.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <version>3.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.1.111</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
